# Polinom_repository

./: .travis.yml  CMakeLists.txt  README.md
List/: List.h  ListElem.h  ListIterator.h
Polinom/: CMakeLists.txt  Monom.cpp  Monom.h  Polinom.cpp  Polinom.h
main/: CMakeLists.txt  PolinomTestMain.cpp
test/: CMakeLists.txt  test_polinom.cpp
